[package]
name = "rfm12b"
version = "0.1.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]

[dependencies.register]
path = "../register"

[dependencies.embedded-hal]
version = "^0.1.2"
default-features = false
features = ["unproven"]

[dependencies.byteorder]
default-features = false
version = "^1.2.1"

[dependencies.cast]
version = "^0.2.0"
default-features = false

[dependencies.crc16]
version = "^0.3.4"
default-features = false

[dependencies.arrayref]
version = "^0.3.4"
default-features = false

[dependencies.fpa]
version = "^0.1.0"
default-features = false

[dependencies.matches]
version = "^0.1.6"
default-features = false
